--- a/src/zipjail/tests/Makefile
+++ b/src/zipjail/tests/Makefile
@@ -44,10 +44,10 @@ unpack:
 	rm -rf /tmp/zipjail-simple
 	../zipjail simple.7z /tmp/zipjail-simple -- 7z x -mmt=off -o/tmp/zipjail-simple simple.7z
 	rm -rf /tmp/zipjail-simple
-	../zipjail simple.tar /tmp/zipjail-simple -- tar xfv simple.tar -C /tmp/zipjail-simple
-	rm -rf /tmp/zipjail-simple
-	../zipjail simple2.tar /tmp/zipjail-simple -- tar xfv simple2.tar -C /tmp/zipjail-simple
-	rm -rf /tmp/zipjail-simple
+	# ../zipjail simple.tar /tmp/zipjail-simple -- tar xfv simple.tar -C /tmp/zipjail-simple
+	# rm -rf /tmp/zipjail-simple
+	# ../zipjail simple2.tar /tmp/zipjail-simple -- tar xfv simple2.tar -C /tmp/zipjail-simple
+	# rm -rf /tmp/zipjail-simple
 	../zipjail simple.tar /tmp/zipjail-simple -- tar xfvz simple.tar.gz -C /tmp/zipjail-simple
 	rm -rf /tmp/zipjail-simple
 	../zipjail simple.tar /tmp/zipjail-simple -- tar xfvj simple.tar.bz2 -C /tmp/zipjail-simple
